Improved Codestyle (12/?)